# webgen

./: AmdPage.cpp  AmdPage.h  BasePage.cpp  BasePage.h  CMakeLists.txt  Console.cpp  Console.h  EthernetPage.cpp  EthernetPage.h  Ethminer.cpp  Ethminer.h  LocalGui.cpp  LocalGui.h  Makefile  NvidiaPage.cpp  NvidiaPage.h  OpenVpnPage.cpp  OpenVpnPage.h  PasswordPage.cpp  PasswordPage.h  RebootPage.cpp  RebootPage.h  ServiceControlWidget.cpp  ServiceControlWidget.h  Settings.cpp  Settings.h  SiteGui.cpp  SiteGui.h  SummaryPage.cpp  SummaryPage.h  UploadedFileWidget.cpp  UploadedFileWidget.h  VtPage.cpp  VtPage.h  WiFiPage.cpp  WiFiPage.h  Xmrig.cpp  Xmrig.h  XmrigAmd.cpp  XmrigAmd.h  (+12 more)
css/: style.css
